Documentation edits made through Mintlify web editor

--- a/app-builder/builder/img-library.mdx
+++ b/app-builder/builder/img-library.mdx
@@ -12,7 +12,13 @@ Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image167_efaa8051c7.png"
     alt="Thư viện hình ảnh trong giao diện quản trị"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title="Thư viện hình ảnh"
   />
 </Frame>
@@ -27,7 +33,13 @@ Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image210_8700753a74.png"
         alt="Nút Tải ảnh mới trong thư viện hình ảnh"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Nút Tải ảnh mới"
       />
     </Frame>
@@ -53,7 +65,13 @@ Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image108_c62d1fa692.png"
         alt="Nút xem chi tiết hình ảnh trong thư viện"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Xem hình ảnh"
       />
     </Frame>
@@ -70,7 +88,13 @@ Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình
       <img
         src="https://aimini-upload.sgp1.digitaloceanspaces.com/image170_30120f526a.png"
         alt="Nút xóa hình ảnh trong thư viện"
-        style={{ borderRadius:"0.5rem" }}
+        style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
         title="Xóa hình ảnh"
       />
     </Frame>
@@ -86,7 +110,13 @@ Thư viện hình ảnh là nơi lưu trữ và quản lý tất cả các hình
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image44_8a6961305a.png"
     alt="Thư viện ảnh mẫu do hệ thống cung cấp"
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title="Thư viện ảnh hệ thống"
   />
 </Frame>
