--- a/app-builder/builder/pages/payment-page.mdx
+++ b/app-builder/builder/pages/payment-page.mdx
@@ -15,7 +15,13 @@ icon: "money-check-dollar"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image364_867ed11b33.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -28,7 +34,13 @@ icon: "money-check-dollar"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image48_3d19e2e8b6.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -39,7 +51,13 @@ icon: "money-check-dollar"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image365_83d16e2dee.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
