--- a/app-builder/builder/pages/minigame-page.mdx
+++ b/app-builder/builder/pages/minigame-page.mdx
@@ -16,7 +16,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image192_09e92692a8.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -29,7 +35,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image201_933df0ceda.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -42,7 +54,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image142_0976d94b23.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -53,7 +71,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image110_e312fd4909.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -66,7 +90,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image181_9e36f3ca69.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -82,7 +112,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image263_c118d867fd.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -95,7 +131,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image118_452003c521.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -106,7 +148,13 @@ icon: "game-console-handheld"
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image264_7b15803934.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -128,7 +176,13 @@ Người dùng có thể điều chỉnh vị trí tại
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image265_7a71efdfad.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -140,7 +194,13 @@ Chọn màu nền cho phần thưởng 1 bằng cách nhấn ô vuông sau đó 
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image266_4970e9eb94.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -154,7 +214,13 @@ Chọn màu viền vòng quay bằng cách nhấn ô vuông sau đó chọn màu
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image267_3bab5b23c8.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
@@ -168,7 +234,13 @@ Chọn màu nút quay bằng cách nhấn ô vuông sau đó chọn màu
   <img
     src="https://aimini-upload.sgp1.digitaloceanspaces.com/image313_a6f6b9873b.png"
     alt="Screenshot of a deployment confirmation message that says All checks have passed."
-    style={{ borderRadius:"0.5rem" }}
+    style={{
+      borderRadius: "0.5rem",
+      width: "100%",
+      height: "auto",
+      objectFit: "cover",
+      objectPosition: "0 -38px" 
+    }}
     title=""
   />
 </Frame>
